--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <meta charset="utf-8">
   <title>Site Curriculo</title>
   <base href="/">
